[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/RayCast2D.gd" type="Script" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/submarine.png" type="Texture" id=3]
[ext_resource path="res://player/256x256 textures (34).png" type="Texture" id=4]
[ext_resource path="res://GUICanvasLayer.gd" type="Script" id=5]
[ext_resource path="res://player/gradient_circle.png" type="Texture" id=6]
[ext_resource path="res://FlatUI/kenneyUI-blue.tres" type="Theme" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 31.0

[sub_resource type="CircleShape2D" id=2]
radius = 385.628

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
sonar_color = Color( 0.054902, 1, 0, 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.34, 1.34 )

[node name="ShadowLight" type="Light2D" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 6 )
texture_scale = 20.73
mode = 2
range_z_min = -817
range_layer_min = -1
range_layer_max = -1
shadow_gradient_length = 4.2

[node name="BgLight" type="Light2D" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 0.991296, 0.991988 )
texture = ExtResource( 6 )
texture_scale = 15.32
color = Color( 0, 0.584314, 0.407843, 1 )
energy = 0.63
range_z_min = -100
range_z_max = -100
range_layer_min = -100
range_layer_max = -100
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_gradient_length = 5.7
shadow_filter = 4
shadow_filter_smooth = 12.8

[node name="GroundLight" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 4.34
color = Color( 1, 0.968627, 0.501961, 1 )
energy = 1.34
range_z_min = -35
range_z_max = 17
range_layer_min = -94
range_layer_max = -1
shadow_filter_smooth = 2.1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 0.222743, 0.222743 )
z_index = 1
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2DRadar" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRadar"]
shape = SubResource( 2 )

[node name="GUICanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="GUICanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -250.0
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 1000, 500 )
theme = ExtResource( 7 )

[node name="Panel" type="Panel" parent="GUICanvasLayer/MarginContainer"]
self_modulate = Color( 1, 1, 1, 0.623529 )
margin_right = 1000.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="GUICanvasLayer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUICanvasLayer/MarginContainer/Panel/MarginContainer"]
margin_right = 950.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="GUICanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 950.0
margin_bottom = 30.0
text = "Shop"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GUICanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 950.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="GUICanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 110.0
margin_bottom = 36.0
text = "Speed"

[node name="HSlider" type="HSlider" parent="GUICanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 950.0
margin_bottom = 42.0
size_flags_horizontal = 3
max_value = 5.0
value = 5.0
rounded = true
tick_count = 6
ticks_on_borders = true

[connection signal="area_entered" from="Area2DRadar" to="." method="_on_Area2DRadar_area_entered"]
